--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "httpx>=0.28.1",
     "poethepoet>=0.33.1",
+    "pytest>=8.3.5",
 ]
