--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Install devbox
         uses: jetify-com/devbox-install-action@v0.11.0
 
-      - name: Run arbitrary commands
-        run: devbox run -- echo "done!"
-
-      - name: Run a script called test
+      - name: Run tests
         run: devbox run test
+
+      - name: Render manifests
+        run: devbox run k8s
