--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,8 @@ jobs:
 
       - run: |
           git config user.name "github-actions[bot]"
-          git config user.email "${{ user.id }}+${{ user.login }}@users.noreply.github.com"
+          # See https://api.github.com/users/github-actions%5Bbot%5D
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
 
       - name: Checkout GitOps repository
