--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,11 @@ jobs:
     needs: [build]
     runs-on: ubuntu-latest
     steps:
+      # - uses: actions/checkout@v4
+
+      - name: Install devbox
+        uses: jetify-com/devbox-install-action@v0.11.0
+
       - name: Render manifests
         run: devbox run k8s
 
