--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Save image tag in an env var
         run: |
-          echo "IMAGE_TAG=${{ steps.meta.outputs.tags }}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${{ steps.meta.outputs.tags }}" >> "$GITHUB_ENV"
 
       - name: Build and push Docker image
         id: push
