--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Test env var
+        run: |
+          echo "FOO=BAR" >> $GITHUB_ENV
+
       # - name: Save image tag in an env var
       #   id: compute-tag
       #   run: |
