--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Test env var
+      - name: Save image tag in an env var
+        id: compute-tag
         run: |
-          echo "FOO=BAR" >> $GITHUB_ENV
-
-      # - name: Save image tag in an env var
-      #   id: compute-tag
-      #   run: |
-      #     echo "IMAGE_TAG=${{ env.REGISTRY}}/${{ env.IMAGE_NAME}}:${GITHUB_SHA::8}" >> "$GITHUB_ENV"
+          echo "IMAGE_TAG=${REGISTRY}/${IMAGE_NAME}:${GITHUB_SHA::8}" >> "$GITHUB_ENV"
 
       - name: Install devbox
         uses: jetify-com/devbox-install-action@v0.11.0
