--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,12 @@ jobs:
       - name: Save image tag in an env var
         id: compute-tag
         run: |
-          echo "IMAGE_TAG=${REGISTRY}/${IMAGE_NAME}:${GITHUB_SHA::8}" >> "$GITHUB_ENV"
+          echo "IMAGE_TAG=foo:v42" >> "$GITHUB_ENV"
+
+      # - name: Save image tag in an env var
+      #   id: compute-tag
+      #   run: |
+      #     echo "IMAGE_TAG=${REGISTRY}/${IMAGE_NAME}:${GITHUB_SHA::8}" >> "$GITHUB_ENV"
 
       - name: Install devbox
         uses: jetify-com/devbox-install-action@v0.11.0
