--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Save image tag in an env var
         id: compute-tag
         run: |
-          echo "FOO=foo:v42" >> "$GITHUB_ENV"
+          echo "FOO=BAR" >> "$GITHUB_ENV"
 
       # - name: Save image tag in an env var
       #   id: compute-tag
