--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,7 @@ jobs:
 
     steps:
 
-      - name: Test
-        run: |
+      - run: |
           echo "FOO=BAR" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
