--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,9 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - run: |
+      - name: Test
+        run: |
           echo "FOO=BAR" >> $GITHUB_ENV
-
-
-      # - name: Save image tag in an env var
-      #   id: compute-tag
-      #   run: |
-      #     echo "IMAGE_TAG=${REGISTRY}/${IMAGE_NAME}:${GITHUB_SHA::8}" >> "$GITHUB_ENV"
 
       - name: Install devbox
         uses: jetify-com/devbox-install-action@v0.11.0
