--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Test1
         run: |
           echo $GITHUB_ENV
+          mkdir -p $GITHUB_ENV
           echo "FOO1=BAR" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
