--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Test2
         run: |
+          echo $FOO1
           echo $GITHUB_ENV
           echo "FOO2=BAR" >> "$GITHUB_ENV"
 
