--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,20 +20,13 @@ jobs:
 
     steps:
 
-      - name: Test1
-        run: |
-          echo $GITHUB_ENV
-          ls
-          ls /home/runner/work/_temp/_runner_file_commands
-          echo "FOO1=BAR" | tee -a "$GITHUB_ENV"
 
       - uses: actions/checkout@v4
 
-      - name: Test2
+      - name: Save image tag in an env var
+        id: compute-tag
         run: |
-          echo $FOO1
-          echo $GITHUB_ENV
-          echo "FOO2=BAR" >> "$GITHUB_ENV"
+          echo "IMAGE_TAG=${{ env.REGISTRY}}/${{ env.IMAGE_NAME}}:${GITHUB_SHA::8}" >> "$GITHUB_ENV"
 
       - name: Install devbox
         uses: jetify-com/devbox-install-action@v0.11.0
